SignIn and SignUp

--- a/sign-up.html
+++ b/sign-up.html
@@ -1,14 +1,12 @@
 ﻿<!doctype html>
 <html class="no-js " lang="en">
-
-<!-- Mirrored from thememakker.com/templates/nexa/html/sign-up.html by HTTrack Website Copier/3.x [XR&CO'2014], Sat, 20 Jan 2018 00:32:23 GMT -->
 <head>
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=Edge">
 <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
 <meta name="description" content="Responsive Bootstrap 4 and web Application ui kit.">
 
-<title>:: Nexa Bootstrap 4 Admin::</title>
+<title>Gafista | Sign Up</title>
 <!-- Favicon-->
 <link rel="icon" href="favicon.ico" type="image/x-icon">
 <!-- Custom Css -->
@@ -16,6 +14,8 @@
 <link rel="stylesheet" href="assets/css/main.css">
 <link rel="stylesheet" href="assets/css/authentication.css">
 <link rel="stylesheet" href="assets/css/color_skins.css">
+<script src="js/jquery-3.1.1.min.js"></script>
+<script src="js/sign-up.js"></script>
 </head>
 
 <body class="theme-orange">
@@ -26,7 +26,7 @@
                 <div class="col-lg-12">
                     <div class="header slideDown">
                         <div class="logo"><img src="assets/images/logo.png" alt="Nexa"></div>
-                        <h1>Nexa Admin</h1>
+                        <h1>Gafista</h1>
                         <ul class="list-unstyled l-social">
                             <li><a href="#"><i class="zmdi zmdi-facebook-box"></i></a></li>
                             <li><a href="#"><i class="zmdi zmdi-linkedin-box"></i></a></li>                            
@@ -34,40 +34,52 @@
                         </ul>
                     </div>                        
                 </div>
-                <form class="col-lg-12" id="sign_in" method="POST">
-                    <h5 class="title">Register a new membership</h5>
+                <form class="col-lg-12" id="sign_up" method="POST" action="api/users/signup">
+                    <h5 class="title" id="feedback">Register a new membership</h5>
                     <div class="form-group form-float">
                             <div class="form-line">
-                                <input type="text" class="form-control">
-                                <label class="form-label">Name Surname</label>
+                                <input type="text" class="form-control" name="txtfirstname">
+                                <label class="form-label">First Name</label>
                             </div>
                         </div>
                         <div class="form-group form-float">
                             <div class="form-line">
-                                <input type="email" class="form-control">
-                                <label class="form-label">Email Address</label>
+                                <input type="text" class="form-control" name="txtlastname">
+                                <label class="form-label">Last Name</label>
                             </div>
                         </div>
                         <div class="form-group form-float">
                             <div class="form-line">
-                                <input type="password" class="form-control">
-                                <label class="form-label">Password</label>
+                                <input type="text" class="form-control" name="txtphonenumber">
+                                <label class="form-label">Phone Number</label>
                             </div>
                         </div>
                         <div class="form-group form-float">
                             <div class="form-line">
-                                <input type="password" class="form-control">
-                                <label class="form-label">Confirm Password</label>
+                                <input type="email" class="form-control" name="txtemail">
+                                <label class="form-label">Email</label>
                             </div>
                         </div>
+                    <div class="form-group form-float">
+                        <div class="form-line">
+                            <input type="password" class="form-control" name="txtfirstpassword" />
+                            <label class="form-label">Password</label>
+                        </div>
+                    </div>
+                    <div class="form-group form-float">
+                        <div class="form-line">
+                            <input type="password" class="form-control" name="txtsecondpassword" />
+                            <label class="form-label">Confirm Password</label>
+                        </div>
+                    </div>
                     <div>
                          <input type="checkbox" name="terms" id="terms" class="filled-in chk-col-pink">
                         <label for="terms">I read and agree to the <a href="javascript:void(0);">terms of usage</a>.</label>
-                    </div>                        
+                    </div>
+                    <div class="col-lg-12">
+                        <button class="btn btn-raised btn-primary waves-effect" type="submit">SIGN UP</button>
+                    </div>
                 </form>
-                <div class="col-lg-12">                        
-                    <a href="javascript:void(0);" class="btn btn-raised btn-primary waves-effect">SIGN UP</a>                        
-                </div>
                 <div class="col-lg-12 m-t-20">
                     <a href="sign-in.html">You already have a membership?</a>
                 </div>                    
@@ -75,11 +87,9 @@
         </div>
     </div>
 </div>
-<!-- Jquery Core Js --> 
+<!-- Jquery Core Js -->
 <script src="assets/bundles/libscripts.bundle.js"></script> <!-- Lib Scripts Plugin Js --> 
 <script src="assets/bundles/vendorscripts.bundle.js"></script> <!-- Lib Scripts Plugin Js --> 
 <script src="assets/bundles/mainscripts.bundle.js"></script><!-- Custom Js -->
 </body>
-
-<!-- Mirrored from thememakker.com/templates/nexa/html/sign-up.html by HTTrack Website Copier/3.x [XR&CO'2014], Sat, 20 Jan 2018 00:32:23 GMT -->
 </html>
