--- a/index.html
+++ b/index.html
@@ -1,7 +1,5 @@
 <!DOCTYPE html>
 <html dir="ltr" lang="en">
-
-<!-- Mirrored from themeearth.com/tf/html/seobiz/ by HTTrack Website Copier/3.x [XR&CO'2014], Sat, 20 Jan 2018 00:03:29 GMT -->
 <head>
 	<!-- Meta Tags -->	
 	<meta name="viewport" content="width=device-width,initial-scale=1.0"/>
@@ -12,7 +10,7 @@
 	<!-- Title -->
 	<title>Gafista Concepts</title>		
 	<!-- Favicon Icon -->
-	<link rel="icon" type="image/png" href="img/favicon.png">	
+	<link rel="icon" type="image/png" href="img/favicon.png">
 	<!-- Apple Touch Icons -->
 	<link rel="apple-touch-icon" href="img/apple-touch-icon.png">
 	<link rel="apple-touch-icon" sizes="57x57" href="img/apple-touch-icon-57x57.png">
@@ -79,7 +77,7 @@
 						</div>
 					</div>
 					<div class="appointment">
-						<a href="#">SignUp</a>
+						<a href="sign-up.html">SignUp</a>
 					</div>					
 				</div>
 			</div>
@@ -127,7 +125,7 @@
 										</ul>								
 									</li>	-->							
 									<li><a href="contact.html">Contact Us</a></li>
-									<li><a href="case-studies.html">Sign-in</a></li>
+									<li><a href="sign-in.html">Sign-in</a></li>
 								</ul>
 							</nav>
 							<div class="menu-icon">	
@@ -1066,6 +1064,4 @@
 	<script src="js/custom.js"></script>
 	<!-- Scripts Js End -->	
 </body>
-
-<!-- Mirrored from themeearth.com/tf/html/seobiz/ by HTTrack Website Copier/3.x [XR&CO'2014], Sat, 20 Jan 2018 00:04:44 GMT -->
 </html>
