--- a/sign-in.html
+++ b/sign-in.html
@@ -1,5 +1,5 @@
 ﻿<!doctype html>
-<html class="no-js " lang="en">
+<html lang="en">
 <head>
 <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=Edge">
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="assets/css/main.css">
     <link rel="stylesheet" href="assets/css/authentication.css">
     <link rel="stylesheet" href="assets/css/color_skins.css">
-    <script src="js/jquery-2.2.4.min.js"></script>
+    <script src="js/jquery-3.1.1.min.js"></script>
     <script src="js/sign-in.js"></script>
 </head>
 
@@ -34,8 +34,8 @@
                         </ul>
                     </div>                        
                 </div>
-                <form class="col-lg-12" id="sign_in" method="POST">
-                    <h5 class="title">Sign in to your Account</h5>
+                <form class="col-lg-12" id="sign_in" method="POST" action="api/users/signin">
+                    <h5 class="title" id="feedback">Sign in to your Account</h5>
                     <div class="form-group form-float">
                         <div class="form-line">
                             <input type="email" class="form-control" name="txtemail">
@@ -48,11 +48,11 @@
                             <label class="form-label">Password</label>
                         </div>
                     </div>
+                    <div class="col-lg-12">
+                        <button type="submit" class="btn btn-raised btn-primary waves-effect">SIGN IN</button>
+                        <a href="sign-up.html" class="btn btn-raised btn-default waves-effect">SIGN UP</a>
+                    </div>
                 </form>
-                <div class="col-lg-12">
-                    <a href="index.html" class="btn btn-raised btn-primary waves-effect">SIGN IN</a>
-                    <a href="sign-up.html" class="btn btn-raised btn-default waves-effect">SIGN UP</a>                        
-                </div>
                 <div class="col-lg-12 m-t-20">
                     <a class="" href="forgot-password.html">Forgot Password?</a>
                 </div>                    
@@ -60,7 +60,6 @@
         </div>
     </div>
 </div>
-
 <!-- Jquery Core Js -->
 <script src="assets/bundles/libscripts.bundle.js"></script>    
 <script src="assets/bundles/vendorscripts.bundle.js"></script>
