--- a/admin/html/form-examples.html
+++ b/admin/html/form-examples.html
@@ -6,7 +6,7 @@
 <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
 <meta name="description" content="Responsive Bootstrap 4 and web Application ui kit.">
 
-<title>:: Nexa Bootstrap 4 Admin::</title>
+<title>Gafista admin</title>
 <link rel="icon" href="favicon.ico" type="image/x-icon">
 <link rel="stylesheet" href="assets/plugins/bootstrap/css/bootstrap.min.css">
 <!-- Custom Css -->
@@ -21,7 +21,7 @@
 		<div class="line"></div>
 		<div class="line"></div>
         <p>Please wait...</p>
-        <div class="m-t-30"><img src="assets/images/logo.svg" width="48" height="48" alt="Nexa"></div>
+        <div class="m-t-30"><img src="assets/images/logop.svg" width="48" height="48" alt="Nexa"></div>
     </div>
 </div>
 
