--- a/sign-in.html
+++ b/sign-in.html
@@ -1,5 +1,5 @@
-<!doctype html>
-<html lang="en">
+﻿<!doctype html>
+<html class="no-js " lang="en">
 <head>
 <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=Edge">
@@ -29,7 +29,7 @@
                         <h1></h1>
                         <ul class="list-unstyled l-social">
                             <li><a href="sign-in.html#"><i class="zmdi zmdi-facebook-box"></i></a></li>
-                            <li><a href="sign-in.html#"><i class="zmdi zmdi-linkedin-box"></i></a></li>
+                            <li><a href="sign-in.html#"><i class="zmdi zmdi-linkedin-box"></i></a></li>                            
                             <li><a href="sign-in.html#"><i class="zmdi zmdi-twitter"></i></a></li>
                         </ul>
                     </div>                        
@@ -60,6 +60,7 @@
         </div>
     </div>
 </div>
+
 <!-- Jquery Core Js -->
 <script src="assets/bundles/libscripts.bundle.js"></script>    
 <script src="assets/bundles/vendorscripts.bundle.js"></script>
