--- a/sign-up.html
+++ b/sign-up.html
@@ -1,4 +1,4 @@
-<!doctype html>
+﻿<!doctype html>
 <html class="no-js " lang="en">
 <head>
 <meta charset="utf-8">
@@ -14,8 +14,8 @@
 <link rel="stylesheet" href="assets/css/main.css">
 <link rel="stylesheet" href="assets/css/authentication.css">
 <link rel="stylesheet" href="assets/css/color_skins.css">
-<script src="js/jquery-3.1.1.min.js"></script>
-<script src="js/sign-up.js"></script>
+    <script src="js/jquery-3.1.1.min.js"></script>
+    <script src="js/sign-up.js"></script>
 </head>
 
 <body class="theme-orange">
@@ -29,7 +29,7 @@
                         <h1></h1>
                         <ul class="list-unstyled l-social">
                             <li><a href="sign-up.html#"><i class="zmdi zmdi-facebook-box"></i></a></li>
-                            <li><a href="sign-up.html#"><i class="zmdi zmdi-linkedin-box"></i></a></li>
+                            <li><a href="sign-up.html#"><i class="zmdi zmdi-linkedin-box"></i></a></li>                            
                             <li><a href="sign-up.html#"><i class="zmdi zmdi-twitter"></i></a></li>
                         </ul>
                     </div>                        
@@ -37,29 +37,29 @@
                 <form class="col-lg-12" id="sign_up" method="POST" action="api/users/signup">
                     <h5 class="title" id="feedback">Register a new membership</h5>
                     <div class="form-group form-float">
-                            <div class="form-line">
-                                <input type="text" class="form-control" name="txtfirstname">
-                                <label class="form-label">First Name</label>
-                            </div>
+                        <div class="form-line">
+                            <input type="text" class="form-control" name="txtfirstname">
+                            <label class="form-label">First Name</label>
                         </div>
-                        <div class="form-group form-float">
-                            <div class="form-line">
-                                <input type="text" class="form-control" name="txtlastname">
-                                <label class="form-label">Last Name</label>
-                            </div>
+                    </div>
+                    <div class="form-group form-float">
+                        <div class="form-line">
+                            <input type="text" class="form-control" name="txtlastname">
+                            <label class="form-label">Last Name</label>
                         </div>
-                        <div class="form-group form-float">
-                            <div class="form-line">
-                                <input type="text" class="form-control" name="txtphonenumber">
-                                <label class="form-label">Phone Number</label>
-                            </div>
+                    </div>
+                    <div class="form-group form-float">
+                        <div class="form-line">
+                            <input type="text" class="form-control" name="txtphonenumber">
+                            <label class="form-label">Phone Number</label>
                         </div>
-                        <div class="form-group form-float">
-                            <div class="form-line">
-                                <input type="email" class="form-control" name="txtemail">
-                                <label class="form-label">Email</label>
-                            </div>
+                    </div>
+                    <div class="form-group form-float">
+                        <div class="form-line">
+                            <input type="email" class="form-control" name="txtemail">
+                            <label class="form-label">Email</label>
                         </div>
+                    </div>
                     <div class="form-group form-float">
                         <div class="form-line">
                             <input type="password" class="form-control" name="txtfirstpassword" />
@@ -73,7 +73,7 @@
                         </div>
                     </div>
                     <div>
-                         <input type="checkbox" name="terms" id="terms" class="filled-in chk-col-pink">
+                        <input type="checkbox" name="terms" id="terms" class="filled-in chk-col-pink">
                         <label for="terms">I read and agree to the <a href="javascript:void(0);">terms of usage</a>.</label>
                     </div>
                     <div class="col-lg-12">
@@ -87,7 +87,7 @@
         </div>
     </div>
 </div>
-<!-- Jquery Core Js -->
+<!-- Jquery Core Js --> 
 <script src="assets/bundles/libscripts.bundle.js"></script> <!-- Lib Scripts Plugin Js --> 
 <script src="assets/bundles/vendorscripts.bundle.js"></script> <!-- Lib Scripts Plugin Js --> 
 <script src="assets/bundles/mainscripts.bundle.js"></script><!-- Custom Js -->
