--- a/user/index.html
+++ b/user/index.html
@@ -15,6 +15,8 @@
 <link rel="stylesheet" href="assets/css/main.css">
 <link rel="stylesheet" href="assets/css/hm-style.css">
 <link rel="stylesheet" href="assets/css/color_skins.css">
+<script type="text/javascript" src="assets/js/pages/jquery-3.1.1.min.js"></script>
+    <script type="text/javascript" src="assets/js/pages/user-index.js"></script>
 </head>
 
 <body class="theme-cyan index2">
@@ -125,7 +127,7 @@
                     <li class="footer"> <a href="javascript:void(0);">View All Tasks</a> </li>
                 </ul>
             </li>
-            <li><a href="sign-in.html" class="mega-menu" data-close="true"><i class="zmdi zmdi-power"></i></a></li>
+            <li><a href="#" class="mega-menu" data-close="true" id="logout"><i class="zmdi zmdi-power"></i></a></li>
             <li class=""><a href="javascript:void(0);" class="js-right-sidebar" data-close="true"><i class="zmdi zmdi-settings zmdi-hc-spin"></i></a></li>
         </ul>
     </div>
