ajax calls for api

--- a/user/index.html
+++ b/user/index.html
@@ -136,7 +136,7 @@
 <div class="menu-container">
     <div class="menu">
         <ul class="pullDown">
-            <li><a href="index2.html">Dashboard</a>
+            <li><a href="index.html">Dashboard</a>
                 
             </li>
 
@@ -160,7 +160,7 @@
 
             <li><a href="javascript:void(0)">Property</a>
                 <ul class="pullDown">
-                    <li><a href="cuproperty.html">Create Property</a> </li>
+                    <li><a href="cuproperty.html">Add Property</a> </li>
                     <li><a href="vuproperty.html">View Property</a> </li>
                                     
                 </ul>
@@ -175,9 +175,9 @@
 <!-- Right Sidebar -->
 <aside id="rightsidebar" class="right-sidebar">
     <ul class="nav nav-tabs">
-        <li class="nav-item"><a class="nav-link active" data-toggle="tab" href="index2.html#skins">Skins</a></li>
-        <li class="nav-item"><a class="nav-link" data-toggle="tab" href="index2.html#chat">Chat</a></li>
-        <li class="nav-item"><a class="nav-link" data-toggle="tab" href="index2.html#settings">Setting</a></li>
+        <li class="nav-item"><a class="nav-link active" data-toggle="tab" href="index.html#skins">Skins</a></li>
+        <li class="nav-item"><a class="nav-link" data-toggle="tab" href="index.html#chat">Chat</a></li>
+        <li class="nav-item"><a class="nav-link" data-toggle="tab" href="index.html#settings">Setting</a></li>
     </ul>
     <div class="tab-content">
         <div role="tabpanel" class="tab-pane in active in active slideRight" id="skins">
@@ -462,7 +462,7 @@
                 <li class="left float-left">
                     <img src="assets/images/xs/avatar3.jpg" class="rounded-circle" alt="">
                     <div class="chat-info">
-                        <a class="name" href="index2.html#">Alexander</a>
+                        <a class="name" href="index.html#">Alexander</a>
                         <span class="datetime">6:12</span>                            
                         <span class="message">Hello, John </span>
                     </div>
@@ -474,10 +474,10 @@
                     <div class="chat-info"><span class="datetime">6:16</span> <span class="message">There are many variations of passages of Lorem Ipsum available</span> </div>
                 </li>
                 <li class="left float-left"> <img src="assets/images/xs/avatar2.jpg" class="rounded-circle" alt="">
-                    <div class="chat-info"> <a class="name" href="index2.html#">Elizabeth</a> <span class="datetime">6:25</span> <span class="message">Hi, Alexander,<br> John <br> What are you doing?</span> </div>
+                    <div class="chat-info"> <a class="name" href="index.html#">Elizabeth</a> <span class="datetime">6:25</span> <span class="message">Hi, Alexander,<br> John <br> What are you doing?</span> </div>
                 </li>
                 <li class="left float-left"> <img src="assets/images/xs/avatar1.jpg" class="rounded-circle" alt="">
-                    <div class="chat-info"> <a class="name" href="index2.html#">Michael</a> <span class="datetime">6:28</span> <span class="message">I would love to join the team.</span> </div>
+                    <div class="chat-info"> <a class="name" href="index.html#">Michael</a> <span class="datetime">6:28</span> <span class="message">I would love to join the team.</span> </div>
                 </li>
                     <li class="right">
                     <div class="chat-info"><span class="datetime">7:02</span> <span class="message">Hello, <br>Michael</span> </div>
@@ -675,29 +675,18 @@
             <div class="col-sm-12">
                  <div class="card">
                     <div class="header">
-                        <h2>Social Media</h2>
-                        <small>Lorem Ipsum is simply dummy</small>
-                        <ul class="header-dropdown m-r--5">
-                            <li class="dropdown"> <a href="javascript:void(0);" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"> <i class="zmdi zmdi-more-vert"></i> </a>
-                                <ul class="dropdown-menu pull-right">
-                                    <li><a href="javascript:void(0);">Action</a></li>
-                                    <li><a href="javascript:void(0);">Another action</a></li>
-                                    <li><a href="javascript:void(0);">Something else here</a></li>
-                                </ul>
-                            </li>
-                        </ul>
+                        <h2>Latest Properties</h2>
+                        <small>Latest additions to your property stack </small>
+
                     </div>
                     <div class="body">
                         <div class="table-responsive social_media_table">
                             <table class="table table-hover">
                                 <thead>
                                     <tr>
-                                        <th>Media</th>
-                                        <th>Name</th>
-                                        <th>Like</th>                                                                                
-                                        <th>Comments</th>
-                                        <th>Share</th>
-                                        <th>Members</th>
+                                        <th>Property Name</th>
+                                        <th>Property Address</th>
+                                        <th>Property Group</th>
                                     </tr>
                                 </thead>
                                 <tbody>
@@ -707,12 +696,7 @@
                                         <td><span class="list-name">Linked In</span>
                                             <span class="text-muted">Florida, United States</span>
                                         </td>
-                                        <td>19K</td>
-                                        <td>14K</td>
-                                        <td>10K</td>
-                                        <td>
-                                            <span class="badge badge-success">2341</span>
-                                        </td>
+
                                     </tr>
                                     <tr>
                                         <td><span class="list-icon twitter-table"><i class="zmdi zmdi-twitter"></i></span>
@@ -721,11 +705,7 @@
                                             <span class="text-muted">Arkansas, United States</span>
                                         </td>
                                         <td>7K</td>
-                                        <td>11K</td>
-                                        <td>21K</td>
-                                        <td>
-                                            <span class="badge badge-success">952</span>
-                                        </td>
+
                                     </tr>
                                     <tr>
                                         <td><span class="list-icon facebook"><i class="zmdi zmdi-facebook"></i></span>
@@ -734,11 +714,7 @@
                                             <span class="text-muted">Illunois, United States</span>
                                         </td>
                                         <td>15K</td>
-                                        <td>18K</td>
-                                        <td>8K</td>
-                                        <td>
-                                            <span class="badge badge-success">6127</span>
-                                        </td>
+
                                     </tr>
                                     <tr>
                                         <td><span class="list-icon google"><i class="zmdi zmdi-google-plus"></i></span>
@@ -747,11 +723,7 @@
                                             <span class="text-muted">Arizona, United States</span>
                                         </td>
                                         <td>15K</td>
-                                        <td>18K</td>
-                                        <td>154</td>
-                                        <td>
-                                            <span class="badge badge-success">325</span>
-                                        </td>
+
                                     </tr>
                                     <tr>
                                         <td><span class="list-icon youtube"><i class="zmdi zmdi-youtube-play"></i></span>
@@ -760,11 +732,7 @@
                                             <span class="text-muted">Alaska, United States</span>
                                         </td>
                                         <td>15K</td>
-                                        <td>18K</td>
-                                        <td>200</td>
-                                        <td>
-                                            <span class="badge badge-success">160</span>
-                                        </td>
+
                                     </tr>
                                 </tbody>
                             </table>
@@ -778,25 +746,17 @@
            <div class="col-lg-12 col-md-12">
                <div class="card ">
                    <div class="header">
-                       <h2>Sales Overview</h2>
-                       <ul class="header-dropdown m-r--5">
-                           <li class="dropdown"> <a href="javascript:void(0);" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"> <i class="zmdi zmdi-more-vert"></i> </a>
-                               <ul class="dropdown-menu slideUp ">
-                                   <li><a href="javascript:void(0);" class=" waves-effect waves-block">Action</a></li>
-                                   <li><a href="javascript:void(0);" class=" waves-effect waves-block">Another action</a></li>
-                                   <li><a href="javascript:void(0);" class=" waves-effect waves-block">Something else</a></li>
-                               </ul>
-                           </li>
-                       </ul>
+                       <h2>Ticket Overview</h2>
+
                    </div>
                    <div class="body table-responsive sales_overview">
                        <table class="table table-hover table-borderless">
                            <thead>
                                <tr>
                                    <th>#</th>
-                                   <th style="width:40%;">Product</th>
-                                   <th class="number">Price</th>
-                                   <th style="width:20%;">Date</th>
+                                   <th style="width:40%;">Title</th>
+                                   <th class="number">Priority</th>
+                                   <th style="width:20%;">Property</th>
                                    <th style="width:20%;">State</th>
                                    <th style="width:5%;" class="actions"></th>
                                </tr>
@@ -808,7 +768,7 @@
                                    <td class="number">$149</td>
                                    <td>Aug 23, 2017</td>
                                    <td><span class="badge badge-success">Completed</span></td>
-                                   <td class="actions"><a href="index2.html#" class="icon"><i class="zmdi zmdi-plus-circle-o"></i></a></td>
+                                   <td class="actions"><a href="index.html#" class="icon"><i class="zmdi zmdi-plus-circle-o"></i></a></td>
                                </tr>
                                <tr>
                                    <td>2</td>
@@ -816,7 +776,7 @@
                                    <td class="number">$535</td>
                                    <td>Aug 20, 2017</td>
                                    <td><span class="badge badge-success">Completed</span></td>
-                                   <td class="actions"><a href="index2.html#" class="icon"><i class="zmdi zmdi-plus-circle-o"></i></a></td>
+                                   <td class="actions"><a href="index.html#" class="icon"><i class="zmdi zmdi-plus-circle-o"></i></a></td>
                                </tr>
                                <tr>
                                    <td>3</td>
@@ -824,7 +784,7 @@
                                    <td class="number">$583</td>
                                    <td>Aug 18, 2017</td>
                                    <td><span class="badge badge-warning">Pending</span></td>
-                                   <td class="actions"><a href="index2.html#" class="icon"><i class="zmdi zmdi-plus-circle-o"></i></a></td>
+                                   <td class="actions"><a href="index.html#" class="icon"><i class="zmdi zmdi-plus-circle-o"></i></a></td>
                                </tr>
                                <tr>
                                    <td>4</td>
@@ -832,7 +792,7 @@
                                    <td class="number">$350</td>
                                    <td>Aug 15, 2017</td>
                                    <td><span class="badge badge-warning">Pending</span></td>
-                                   <td class="actions"><a href="index2.html#" class="icon"><i class="zmdi zmdi-plus-circle-o"></i></a></td>
+                                   <td class="actions"><a href="index.html#" class="icon"><i class="zmdi zmdi-plus-circle-o"></i></a></td>
                                </tr>
                                <tr>
                                    <td>5</td>
@@ -840,7 +800,7 @@
                                    <td class="number">$495</td>
                                    <td>Aug 13, 2017</td>
                                    <td><span class="badge badge-danger">Cancelled</span></td>
-                                   <td class="actions"><a href="index2.html#" class="icon"><i class="zmdi zmdi-plus-circle-o"></i></a></td>
+                                   <td class="actions"><a href="index.html#" class="icon"><i class="zmdi zmdi-plus-circle-o"></i></a></td>
                                </tr>
                                <tr>
                                    <td>6</td>
@@ -848,7 +808,7 @@
                                    <td class="number">$583</td>
                                    <td>Aug 18, 2017</td>
                                    <td><span class="badge badge-warning">Pending</span></td>
-                                   <td class="actions"><a href="index2.html#" class="icon"><i class="zmdi zmdi-plus-circle-o"></i></a></td>
+                                   <td class="actions"><a href="index.html#" class="icon"><i class="zmdi zmdi-plus-circle-o"></i></a></td>
                                </tr>
                                <tr>
                                    <td>7</td>
@@ -856,7 +816,7 @@
                                    <td class="number">$350</td>
                                    <td>Aug 15, 2017</td>
                                    <td><span class="badge badge-warning">Pending</span></td>
-                                   <td class="actions"><a href="index2.html#" class="icon"><i class="zmdi zmdi-plus-circle-o"></i></a></td>
+                                   <td class="actions"><a href="index.html#" class="icon"><i class="zmdi zmdi-plus-circle-o"></i></a></td>
                                </tr>
                                <tr>
                                    <td>8</td>
@@ -864,7 +824,7 @@
                                    <td class="number">$149</td>
                                    <td>Aug 23, 2017</td>
                                    <td><span class="badge badge-success">Completed</span></td>
-                                   <td class="actions"><a href="index2.html#" class="icon"><i class="zmdi zmdi-plus-circle-o"></i></a></td>
+                                   <td class="actions"><a href="index.html#" class="icon"><i class="zmdi zmdi-plus-circle-o"></i></a></td>
                                </tr>                               
                            </tbody>
                        </table>
