--- a/user/vuproperty.html
+++ b/user/vuproperty.html
@@ -10,11 +10,15 @@
 <link rel="icon" href="favicon.ico" type="image/x-icon">
 <!-- Favicon-->
 <link rel="stylesheet" href="assets/plugins/bootstrap/css/bootstrap.min.css">
+    <!-- JQuery DataTable Css -->
+    <link rel="stylesheet" href="assets/plugins/jquery-datatable/dataTables.bootstrap4.min.css">
 <link rel="stylesheet" href="assets/plugins/morrisjs/morris.css"/>
 <!-- Custom Css -->
 <link rel="stylesheet" href="assets/css/main.css">
 <link rel="stylesheet" href="assets/css/hm-style.css">
 <link rel="stylesheet" href="assets/css/color_skins.css">
+    <script src="../js/jquery-3.1.1.min.js"></script>
+    <script type="text/javascript" src="assets/js/pages/user-index.js"></script>
 </head>
 
 <body class="theme-cyan index2">
@@ -125,7 +129,7 @@
                     <li class="footer"> <a href="javascript:void(0);">View All Tasks</a> </li>
                 </ul>
             </li>
-            <li><a href="sign-in.html" class="mega-menu" data-close="true"><i class="zmdi zmdi-power"></i></a></li>
+            <li><a href="#" class="mega-menu" id="logout" data-close="true"><i class="zmdi zmdi-power"></i></a></li>
             <li class=""><a href="javascript:void(0);" class="js-right-sidebar" data-close="true"><i class="zmdi zmdi-settings zmdi-hc-spin"></i></a></li>
         </ul>
     </div>
@@ -134,7 +138,7 @@
 <div class="menu-container">
     <div class="menu">
         <ul class="pullDown">
-            <li><a href="index2.html">Dashboard</a>
+            <li><a href="index.html">Dashboard</a>
                 
             </li>
 
@@ -173,9 +177,9 @@
 <!-- Right Sidebar -->
 <aside id="rightsidebar" class="right-sidebar">
     <ul class="nav nav-tabs">
-        <li class="nav-item"><a class="nav-link active" data-toggle="tab" href="index2.html#skins">Skins</a></li>
-        <li class="nav-item"><a class="nav-link" data-toggle="tab" href="index2.html#chat">Chat</a></li>
-        <li class="nav-item"><a class="nav-link" data-toggle="tab" href="index2.html#settings">Setting</a></li>
+        <li class="nav-item"><a class="nav-link active" data-toggle="tab" href="index.html#skins">Skins</a></li>
+        <li class="nav-item"><a class="nav-link" data-toggle="tab" href="index.html#chat">Chat</a></li>
+        <li class="nav-item"><a class="nav-link" data-toggle="tab" href="index.html#settings">Setting</a></li>
     </ul>
     <div class="tab-content">
         <div role="tabpanel" class="tab-pane in active in active slideRight" id="skins">
@@ -460,7 +464,7 @@
                 <li class="left float-left">
                     <img src="assets/images/xs/avatar3.jpg" class="rounded-circle" alt="">
                     <div class="chat-info">
-                        <a class="name" href="index2.html#">Alexander</a>
+                        <a class="name" href="index.html#">Alexander</a>
                         <span class="datetime">6:12</span>                            
                         <span class="message">Hello, John </span>
                     </div>
@@ -472,10 +476,10 @@
                     <div class="chat-info"><span class="datetime">6:16</span> <span class="message">There are many variations of passages of Lorem Ipsum available</span> </div>
                 </li>
                 <li class="left float-left"> <img src="assets/images/xs/avatar2.jpg" class="rounded-circle" alt="">
-                    <div class="chat-info"> <a class="name" href="index2.html#">Elizabeth</a> <span class="datetime">6:25</span> <span class="message">Hi, Alexander,<br> John <br> What are you doing?</span> </div>
+                    <div class="chat-info"> <a class="name" href="index.html#">Elizabeth</a> <span class="datetime">6:25</span> <span class="message">Hi, Alexander,<br> John <br> What are you doing?</span> </div>
                 </li>
                 <li class="left float-left"> <img src="assets/images/xs/avatar1.jpg" class="rounded-circle" alt="">
-                    <div class="chat-info"> <a class="name" href="index2.html#">Michael</a> <span class="datetime">6:28</span> <span class="message">I would love to join the team.</span> </div>
+                    <div class="chat-info"> <a class="name" href="index.html#">Michael</a> <span class="datetime">6:28</span> <span class="message">I would love to join the team.</span> </div>
                 </li>
                     <li class="right">
                     <div class="chat-info"><span class="datetime">7:02</span> <span class="message">Hello, <br>Michael</span> </div>
@@ -516,96 +520,44 @@
            <div class="col-lg-12 col-md-12">
                <div class="card ">
                    <div class="header">
-                       <h2>Sales Overview</h2>
-                       <ul class="header-dropdown m-r--5">
-                           <li class="dropdown"> <a href="javascript:void(0);" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"> <i class="zmdi zmdi-more-vert"></i> </a>
-                               <ul class="dropdown-menu slideUp ">
-                                   <li><a href="javascript:void(0);" class=" waves-effect waves-block">Action</a></li>
-                                   <li><a href="javascript:void(0);" class=" waves-effect waves-block">Another action</a></li>
-                                   <li><a href="javascript:void(0);" class=" waves-effect waves-block">Something else</a></li>
-                               </ul>
-                           </li>
-                       </ul>
+                       <h2>All Properties</h2>
+
                    </div>
-                   <div class="body table-responsive sales_overview">
-                       <table class="table table-hover table-borderless">
-                           <thead>
+                   <script type="text/javascript" language="javascript" >
+                       $(document).ready(function() {
+                           var dataTable = $('#jsontable').DataTable( {
+                               "processing": true,
+                               "serverSide": true,
+                               "ajax":{
+                                   url :"../api/client/clientproperty", // json datasource
+                                   type: "get",  // method  , by default get
+
+                               }
+                           } );
+                       } );
+                   </script>
+                   <div class="body">
+                       <div class="table-responsive">
+                           <table id="jsontable" class="table table-bordered table-striped table-hover dataTable js-exportable">
+                               <thead>
                                <tr>
-                                   <th>#</th>
-                                   <th style="width:40%;">Product</th>
-                                   <th class="number">Price</th>
-                                   <th style="width:20%;">Date</th>
-                                   <th style="width:20%;">State</th>
-                                   <th style="width:5%;" class="actions"></th>
+                                   <th>Property Name</th>
+                                   <th>Property Group</th>
+                                   <th>Address</th>
+                                   <th>Action</th>
                                </tr>
-                           </thead>
-                           <tbody class="no-border-x">
+                               </thead>
+
+                               <tfoot>
                                <tr>
-                                   <td>1</td>
-                                   <td>Sony Xperia M4</td>
-                                   <td class="number">$149</td>
-                                   <td>Aug 23, 2017</td>
-                                   <td><span class="badge badge-success">Completed</span></td>
-                                   <td class="actions"><a href="index2.html#" class="icon"><i class="zmdi zmdi-plus-circle-o"></i></a></td>
+                                   <th>Property Name</th>
+                                   <th>Property Group</th>
+                                   <th>Address</th>
+                                   <th>Action</th>
                                </tr>
-                               <tr>
-                                   <td>2</td>
-                                   <td>Apple iPhone 6</td>
-                                   <td class="number">$535</td>
-                                   <td>Aug 20, 2017</td>
-                                   <td><span class="badge badge-success">Completed</span></td>
-                                   <td class="actions"><a href="index2.html#" class="icon"><i class="zmdi zmdi-plus-circle-o"></i></a></td>
-                               </tr>
-                               <tr>
-                                   <td>3</td>
-                                   <td>Samsung Galaxy S7</td>
-                                   <td class="number">$583</td>
-                                   <td>Aug 18, 2017</td>
-                                   <td><span class="badge badge-warning">Pending</span></td>
-                                   <td class="actions"><a href="index2.html#" class="icon"><i class="zmdi zmdi-plus-circle-o"></i></a></td>
-                               </tr>
-                               <tr>
-                                   <td>4</td>
-                                   <td>HTC One M9</td>
-                                   <td class="number">$350</td>
-                                   <td>Aug 15, 2017</td>
-                                   <td><span class="badge badge-warning">Pending</span></td>
-                                   <td class="actions"><a href="index2.html#" class="icon"><i class="zmdi zmdi-plus-circle-o"></i></a></td>
-                               </tr>
-                               <tr>
-                                   <td>5</td>
-                                   <td>Sony Xperia Z5</td>
-                                   <td class="number">$495</td>
-                                   <td>Aug 13, 2017</td>
-                                   <td><span class="badge badge-danger">Cancelled</span></td>
-                                   <td class="actions"><a href="index2.html#" class="icon"><i class="zmdi zmdi-plus-circle-o"></i></a></td>
-                               </tr>
-                               <tr>
-                                   <td>6</td>
-                                   <td>Samsung Galaxy S9</td>
-                                   <td class="number">$583</td>
-                                   <td>Aug 18, 2017</td>
-                                   <td><span class="badge badge-warning">Pending</span></td>
-                                   <td class="actions"><a href="index2.html#" class="icon"><i class="zmdi zmdi-plus-circle-o"></i></a></td>
-                               </tr>
-                               <tr>
-                                   <td>7</td>
-                                   <td>HTC One M13</td>
-                                   <td class="number">$350</td>
-                                   <td>Aug 15, 2017</td>
-                                   <td><span class="badge badge-warning">Pending</span></td>
-                                   <td class="actions"><a href="index2.html#" class="icon"><i class="zmdi zmdi-plus-circle-o"></i></a></td>
-                               </tr>
-                               <tr>
-                                   <td>8</td>
-                                   <td>Sony Xperia M4</td>
-                                   <td class="number">$149</td>
-                                   <td>Aug 23, 2017</td>
-                                   <td><span class="badge badge-success">Completed</span></td>
-                                   <td class="actions"><a href="index2.html#" class="icon"><i class="zmdi zmdi-plus-circle-o"></i></a></td>
-                               </tr>                               
-                           </tbody>
-                       </table>
+                               </tfoot>
+                            </table>
+                       </div>
                    </div>
                </div>
            </div>           
@@ -621,6 +573,24 @@
         </div>
     </div>
 </section>
+<script type="text/javascript" language="javascript" >
+    $(document).ready(function() {
+        var dataTable = $('#employee-grid').DataTable( {
+            "processing": true,
+            "serverSide": true,
+            "ajax":{
+                url :'../api/client/clientproperty', // json datasource
+                type: "post",  // method  , by default get
+                error: function(){  // error handling
+                    $(".employee-grid-error").html("");
+                    $("#employee-grid").append('<tbody class="employee-grid-error"><tr><th colspan="3">No data found in the server</th></tr></tbody>');
+                    $("#employee-grid_processing").css("display","none");
+
+                }
+            }
+        } );
+    } );
+</script>
 
 <!-- Jquery Core Js --> 
 <script src="assets/bundles/libscripts.bundle.js"></script> <!-- Lib Scripts Plugin Js --> 
@@ -633,6 +603,17 @@
 
 <script src="assets/bundles/mainscripts.bundle.js"></script> 
 <script src="assets/js/pages/index2.js"></script>
+<!-- Jquery DataTable Plugin Js -->
+<script src="assets/bundles/datatablescripts.bundle.js"></script>
+<script src="assets/plugins/jquery-datatable/buttons/dataTables.buttons.min.js"></script>
+<script src="assets/plugins/jquery-datatable/buttons/buttons.bootstrap4.min.js"></script>
+<script src="assets/plugins/jquery-datatable/buttons/buttons.colVis.min.js"></script>
+<script src="assets/plugins/jquery-datatable/buttons/buttons.flash.min.js"></script>
+<script src="assets/plugins/jquery-datatable/buttons/buttons.html5.min.js"></script>
+<script src="assets/plugins/jquery-datatable/buttons/buttons.print.min.js"></script>
+
+<script src="assets/bundles/mainscripts.bundle.js"></script><!-- Custom Js -->
+<script src="assets/js/pages/tables/jquery-datatable.js"></script>
 <script>
     /*global $ */
     $(document).ready(function() {
