--- a/user/vuproperty.html
+++ b/user/vuproperty.html
@@ -538,7 +538,7 @@
                    </script>
                    <div class="body">
                        <div class="table-responsive">
-                           <table id="jsontable" class="table table-bordered table-striped table-hover dataTable js-exportable">
+                           <table id="js-exportable" class="table table-bordered table-striped table-hover dataTable js-exportable">
                                <thead>
                                <tr>
                                    <th>Property Name</th>
