--- a/admin/vticket.html
+++ b/admin/vticket.html
@@ -12,11 +12,16 @@
 <link rel="stylesheet" href="assets/plugins/bootstrap/css/bootstrap.min.css">
 <link rel="stylesheet" href="assets/plugins/footable-bootstrap/css/footable.bootstrap.min.css">
 <link rel="stylesheet" href="assets/plugins/footable-bootstrap/css/footable.standalone.min.css">
+    <!-- Bootstrap Material Datetime Picker Css -->
+    <link href="assets/plugins/bootstrap-material-datetimepicker/css/bootstrap-material-datetimepicker.css" rel="stylesheet" />
+    <!-- Wait Me Css -->
 
 <!-- Custom Css -->
 <link rel="stylesheet" href="assets/css/main.css">
 <link rel="stylesheet" href="assets/css/ecommerce.css">
 <link rel="stylesheet" href="assets/css/color_skins.css">
+    <script type="text/javascript" src="assets/js/pages/jquery-3.1.1.min.js"></script>
+    <script type="text/javascript" src="assets/js/pages/admin-ticket.js"></script>
 </head>
 <body class="theme-orange">
 <!-- Page Loader -->
@@ -173,7 +178,7 @@
                     <i class="zmdi zmdi-fullscreen"></i>                   
                 </a>
             </li>
-            <li><a href="sign-in.html" class="mega-menu" data-close="true"><i class="zmdi zmdi-power"></i></a></li>
+            <li><a href="#" id="logout" class="mega-menu" data-close="true"><i class="zmdi zmdi-power"></i></a></li>
             <li class=""><a href="javascript:void(0);" class="js-right-sidebar" data-close="true"><i class="zmdi zmdi-settings zmdi-hc-spin"></i></a></li>
         </ul>
     </div>
@@ -186,7 +191,7 @@
             <img src="assets/images/xs/avatar1.jpg" width="48" height="48" alt="User" />
         </div>
         <div class="info-container">
-            <div class="name" data-toggle="dropdown">John Doe</div>
+            <div class="name" data-toggle="dropdown" id="username">John Doe</div>
             <div class="btn-group user-helper-dropdown">
                 <i class="material-icons" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true" role="button"> keyboard_arrow_down </i>
                 <ul class="dropdown-menu slideUp">
@@ -199,7 +204,7 @@
                     <li><a href="sign-in.html"><i class="material-icons">input</i>Sign Out</a></li>
                 </ul>
             </div>
-            <div class="email">john.doe@example.com</div>
+            <div class="email" id="useremail">john.doe@example.com</div>
         </div>
     </div>
     <!-- #User Info --> 
@@ -633,96 +638,18 @@
                         <table class="table table-hover m-b-0">
                             <thead>
                                 <tr>
-                                    <th>User ID</th>
+                                    <th>Username</th>
                                     <th>Property Name</th>
+                                    <th data-breakpoints="sm xs">Summary</th>
                                     <th data-breakpoints="sm xs">Property Group</th>
-                                    <th data-breakpoints="sm xs">Subject</th>
                                     <th data-breakpoints="sm xs">Status</th>
-                                    <th data-breakpoints="sm xs">Action</th>
-                                   
                                     <th data-breakpoints="sm xs">Priority</th>
-
-                                    <th data-breakpoints="sm xs">Date</th>
+                                    <th data-breakpoints="sm xs">Pick-Up Date</th>
+                                    <th data-breakpoints="sm xs">Action</th>
                                 </tr>
                             </thead>
-                            <tbody>
-                                <tr>
-                                    <td><img src="assets/images/ecommerce/1.png" width="48" alt="Product img"></td>
-                                    <td><h5>Simple Black Clock</h5></td>
-                                    <td><span class="text-muted">randomised words even slightly believable</span></td>
-                                    <td>$16.00</td>
-                                    <td><span class="col-green">In Stock</span></td>
-                                    <td>
-                                        <a href="javascript:void(0);" class="btn btn-default waves-effect waves-float waves-green"><i class="zmdi zmdi-edit"></i></a>
-                                        <a href="javascript:void(0);" class="btn btn-default waves-effect waves-float waves-red"><i class="zmdi zmdi-delete"></i></a>
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td><img src="assets/images/ecommerce/10.png" width="48" alt="Product img"></td>
-                                    <td><h5>Brone Candle</h5></td>
-                                    <td><span class="text-muted">It is a long established  will be distracted</span></td>
-                                    <td>$15.00</td>
-                                    <td><span class="col-amber">Low Stock</span></td>
-                                    <td>
-                                        <a href="javascript:void(0);" class="btn btn-default waves-effect waves-float waves-green"><i class="zmdi zmdi-edit"></i></a>
-                                        <a href="javascript:void(0);" class="btn btn-default waves-effect waves-float waves-red"><i class="zmdi zmdi-delete"></i></a>
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td><img src="assets/images/ecommerce/11.png" width="48" alt="Product img"></td>
-                                    <td><h5>Wood Simple Clock</h5></td>
-                                    <td><span class="text-muted">There passages of Lorem Ipsum available</span></td>
-                                    <td>$16.00</td>
-                                    <td><span class="col-amber">Low Stock</span></td>
-                                    <td>
-                                        <a href="javascript:void(0);" class="btn btn-default waves-effect waves-float waves-green"><i class="zmdi zmdi-edit"></i></a>
-                                        <a href="javascript:void(0);" class="btn btn-default waves-effect waves-float waves-red"><i class="zmdi zmdi-delete"></i></a>
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td><img src="assets/images/ecommerce/5.png" width="48" alt="Product img"></td>
-                                    <td><h5>Unero Small Bag</h5></td>
-                                    <td><span class="text-muted">It is a long established fact that a distracted</span></td>
-                                    <td>$23.00</td>
-                                    <td><span class="col-red">Out Of Stock</span></td>
-                                    <td>
-                                        <a href="javascript:void(0);" class="btn btn-default waves-effect waves-float waves-green"><i class="zmdi zmdi-edit"></i></a>
-                                        <a href="javascript:void(0);" class="btn btn-default waves-effect waves-float waves-red"><i class="zmdi zmdi-delete"></i></a>
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td><img src="assets/images/ecommerce/6.png" width="48" alt="Product img"></td>
-                                    <td><h5>Simple Black Clock</h5></td>
-                                    <td><span class="text-muted">Contrary to popular belief, simply random text</span></td>
-                                    <td>$16.00</td>
-                                    <td><span class="col-green">In Stock</span></td>
-                                    <td>
-                                        <a href="javascript:void(0);" class="btn btn-default waves-effect waves-float waves-green"><i class="zmdi zmdi-edit"></i></a>
-                                        <a href="javascript:void(0);" class="btn btn-default waves-effect waves-float waves-red"><i class="zmdi zmdi-delete"></i></a>
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td><img src="assets/images/ecommerce/2.png" width="48" alt="Product img"></td>
-                                    <td><h5>Brone Lamp Glasses</h5></td>
-                                    <td><span class="text-muted">All the Lorem Ipsum generators on predefined chunks</span></td>
-                                    <td>$12.00</td>
-                                    <td><span class="col-green">In Stock</span></td>
-                                    <td>
-                                        <a href="javascript:void(0);" class="btn btn-default waves-effect waves-float waves-green"><i class="zmdi zmdi-edit"></i></a>
-                                        <a href="javascript:void(0);" class="btn btn-default waves-effect waves-float waves-red"><i class="zmdi zmdi-delete"></i></a>
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td><img src="assets/images/ecommerce/3.png" width="48" alt="Product img"></td>
-                                    <td><h5>Simple Black Clock</h5></td>
-                                    <td><span class="text-muted">established fact that a be distracted</span></td>
-                                    <td>$22.00</td>
-                                    <td><span class="col-red">Out Of Stock</span></td>
-                                    <td>
-                                        <a href="javascript:void(0);" class="btn btn-default waves-effect waves-float waves-green"><i class="zmdi zmdi-edit"></i></a>
-                                        <a href="javascript:void(0);" class="btn btn-default waves-effect waves-float waves-red"><i class="zmdi zmdi-delete"></i></a>
-                                    </td>
-                                </tr>        
+                            <tbody id="tblticketlist">
+
                             </tbody>
                         </table>
                     </div>        
@@ -730,21 +657,87 @@
             </div>
         </div>
         <ul class="pagination">
-            <li class="page-item"><a class="page-link" href="contact.html#">Previous</a></li>
-            <li class="page-item active"><a class="page-link" href="contact.html#">1</a></li>
-            <li class="page-item"><a class="page-link" href="contact.html#">2</a></li>
-            <li class="page-item"><a class="page-link" href="contact.html#">3</a></li>
-            <li class="page-item"><a class="page-link" href="contact.html#">Next</a></li>
+            <li class="page-item"><a class="page-link" href="#">Previous</a></li>
+<!--            <li class="page-item active"><a class="page-link" href="#">1</a></li>
+            <li class="page-item"><a class="page-link" href="#">2</a></li>
+            <li class="page-item"><a class="page-link" href="#">3</a></li>-->
+            <li class="page-item"><a class="page-link" href="#">Next</a></li>
             </ul>
     </div>   
 </section>
-<!-- Jquery Core Js --> 
+<!-- Jquery Core Js -->
+<!-- Modal -->
+<!-- Default Size -->
+<form id="frmEditTicket">
+<div class="modal fade" id="editticket" tabindex="-1" role="dialog">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h4 class="modal-title" id="defaultModalLabel">Edit Ticket</h4>
+            </div>
+            <div class="modal-body">
+                <div class="form-group">
+                    <div class="form-line">
+                        <input type="text" class="form-control" placeholder="Property Name" name="txtpropertyname" id="propertyname">
+                    </div>
+                </div>
+                <div class="form-group">
+                    <div class="form-line">
+                        <input type="text" class="form-control" placeholder="Property Subject" name="txtpropertysubject" id="propertysubject">
+                    </div>
+                </div>
+                <div class="form-group">
+                    <div class="form-line">
+                        <select class="form-control" name="ddpropertygroup" id="ddPropertyGroup">
+                        </select>
+                    </div>
+                </div>
+
+                <div class="form-group">
+                    <div class="form-line">
+                        <select class="form-control" name="ddpropertystatus" id="ddPropertyStatus">
+                            <option value="pending">Pending</option>
+                            <option value="done">Done</option>
+                            <option value="ongoing">Ongoing</option>
+                        </select>
+                    </div>
+                </div>
+
+                <div class="form-group">
+                    <div class="form-line">
+                        <select class="form-control" name="ddpropertypriority">
+                            <option value="high">High</option>
+                            <option value="medium">Medium</option>
+                            <option value="low">Low</option>
+                        </select>
+                    </div>
+                </div>
+
+                <div class="form-group">
+                    <div class="form-line">
+                        <input type="text" class="datepicker form-control" placeholder="Pick-Up Time" name="propertypickuptime" id="propertypickuptime">
+                    </div>
+                </div>
+                <input type="text" value="" name="propertyid" id="propertyId" hidden />
+            </div>
+            <div class="modal-footer">
+                <button type="submit" class="btn  btn-raised btn-info waves-effect">Save</button>
+                <button type="button" class="btn btn-raised btn-default waves-effect" data-dismiss="modal">CLOSE</button>
+            </div>
+        </div>
+    </div>
+</div>
 <script src="assets/bundles/libscripts.bundle.js"></script> <!-- Lib Scripts Plugin Js --> 
 <script src="assets/bundles/vendorscripts.bundle.js"></script> <!-- Lib Scripts Plugin Js --> 
 
 <script src="assets/bundles/footable.bundle.js"></script> <!-- Lib Scripts Plugin Js -->
 
 <script src="assets/bundles/mainscripts.bundle.js"></script><!-- Custom Js -->
-<script src="assets/js/pages/tables/footable.js"></script><!-- Custom Js --> 
+<script src="assets/js/pages/tables/footable.js"></script><!-- Custom Js -->
+<script src="assets/plugins/autosize/autosize.js"></script> <!-- Autosize Plugin Js -->
+<script src="assets/plugins/momentjs/moment.js"></script> <!-- Moment Plugin Js -->
+<!-- Bootstrap Material Datetime Picker Plugin Js -->
+<script src="assets/plugins/bootstrap-material-datetimepicker/js/bootstrap-material-datetimepicker.js"></script>
+<script src="assets/js/pages/forms/basic-form-elements.js"></script>
 </body>
 </html>
