--- a/user/vuproperty.html
+++ b/user/vuproperty.html
@@ -18,7 +18,7 @@
 <link rel="stylesheet" href="assets/css/hm-style.css">
 <link rel="stylesheet" href="assets/css/color_skins.css">
     <script src="../js/jquery-3.1.1.min.js"></script>
-    <script type="text/javascript" src="assets/js/pages/user-index.js"></script>
+    <script type="text/javascript" src="assets/js/pages/user-property.js"></script>
 </head>
 
 <body class="theme-cyan index2">
@@ -43,14 +43,14 @@
 <div class="overlay"></div><!-- Search  -->
 <div class="search-bar">
     <div class="search-icon"> <i class="material-icons">search</i> </div>
-    <input type="text" placeholder="Explore Nexa...">
+    <input type="text" placeholder="Explore Gafista...">
     <div class="close-search"> <i class="material-icons">close</i> </div>
 </div>
 
 <!-- Top Bar -->
 <nav class="navbar">
     <div class="col-12">
-        <div class="navbar-header"> <a href="javascript:void(0);" class="h-bars"></a> <a class="navbar-brand" href="index.html">Nexa</a></div>
+        <div class="navbar-header"> <a href="javascript:void(0);" class="h-bars"></a> <a class="navbar-brand" href="index.html">Gafista</a></div>
         <ul class="nav navbar-nav navbar-right">
             <li><a href="javascript:void(0);" class="js-search" data-close="true"><i class="zmdi zmdi-search"></i></a></li>
             <li class="dropdown"> <a href="javascript:void(0);" class="dropdown-toggle" data-toggle="dropdown" role="button"><i class="zmdi zmdi-notifications"></i>
@@ -520,43 +520,26 @@
            <div class="col-lg-12 col-md-12">
                <div class="card ">
                    <div class="header">
-                       <h2>All Properties</h2>
+                       <h2>Your Properties</h2>
 
                    </div>
-                   <script type="text/javascript" language="javascript" >
-                       $(document).ready(function() {
-                           var dataTable = $('#jsontable').DataTable( {
-                               "processing": true,
-                               "serverSide": true,
-                               "ajax":{
-                                   url :"../api/client/clientproperty", // json datasource
-                                   type: "get",  // method  , by default get
 
-                               }
-                           } );
-                       } );
-                   </script>
                    <div class="body">
                        <div class="table-responsive">
-                           <table id="js-exportable" class="table table-bordered table-striped table-hover dataTable js-exportable">
+                           <table class="table table-hover m-b-0">
                                <thead>
                                <tr>
+                                   <th>Username</th>
                                    <th>Property Name</th>
-                                   <th>Property Group</th>
                                    <th>Address</th>
-                                   <th>Action</th>
+                                   <th>Property Group</th>
+                                   <th data-breakpoints="sm xs">Action</th>
                                </tr>
                                </thead>
+                               <tbody id="tblpropertylist">
 
-                               <tfoot>
-                               <tr>
-                                   <th>Property Name</th>
-                                   <th>Property Group</th>
-                                   <th>Address</th>
-                                   <th>Action</th>
-                               </tr>
-                               </tfoot>
-                            </table>
+                               </tbody>
+                           </table>
                        </div>
                    </div>
                </div>
@@ -573,24 +556,7 @@
         </div>
     </div>
 </section>
-<script type="text/javascript" language="javascript" >
-    $(document).ready(function() {
-        var dataTable = $('#employee-grid').DataTable( {
-            "processing": true,
-            "serverSide": true,
-            "ajax":{
-                url :'../api/client/clientproperty', // json datasource
-                type: "post",  // method  , by default get
-                error: function(){  // error handling
-                    $(".employee-grid-error").html("");
-                    $("#employee-grid").append('<tbody class="employee-grid-error"><tr><th colspan="3">No data found in the server</th></tr></tbody>');
-                    $("#employee-grid_processing").css("display","none");
 
-                }
-            }
-        } );
-    } );
-</script>
 
 <!-- Jquery Core Js --> 
 <script src="assets/bundles/libscripts.bundle.js"></script> <!-- Lib Scripts Plugin Js --> 
