View All Admins Delete Admin

--- a/admin/contact_admin.html
+++ b/admin/contact_admin.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="assets/css/main.css">
     <link rel="stylesheet" href="assets/css/color_skins.css">
     <script type="text/javascript" src="assets/js/pages/jquery-3.1.1.min.js"></script>
-    <script type="text/javascript" src="assets/js/pages/admin-clients.js"></script>
+    <script type="text/javascript" src="assets/js/pages/admin-admins.js"></script>
 </head>
 
 <body class="theme-orange">
@@ -195,6 +195,8 @@
         </div>
         <!-- #Menu -->
     </aside>
+
+<!-- Chat-launcher -->
 <div class="chat-launcher"></div>
 <div class="chat-wrapper">
 <div class="card">
