--- a/admin/view_property_grp.html
+++ b/admin/view_property_grp.html
@@ -159,14 +159,12 @@
                     <li> <a href="view_property_grp.html">View Property Groups</a></li>
                 </ul>
             </li>
-            <li> <a href="javascript:void(0);" class="menu-toggle"><i class="zmdi zmdi-accounts"></i><span>Users/Agents</span> </a>
+            <li> <a href="javascript:void(0);" class="menu-toggle"><i class="zmdi zmdi-accounts"></i><span>Users/Admins</span> </a>
                 <ul class="ml-menu">
                     <li><a href="contact.html">View Clients</a></li>
                     <li><a href="create_user.html">Create Clients</a> </li>
-                    <li><a href="contact.html">View Agents</a></li>
-                    <li><a href="create_agent.html">Create Agents</a></li>
-
-
+                    <li><a href="contact_admin.html">View Admins</a></li>
+                    <li><a href="create_agent.html">Create Admins</a></li>
                     <li><a href="form-upload.html">File Upload</a></li>
                 </ul>
             </li>
