--- a/admin/ticket_timeline.html
+++ b/admin/ticket_timeline.html
@@ -117,87 +117,81 @@
     <!-- User Info -->
     <div class="user-info">
         <div class="image">
-            <img src="assets/images/xs/avatar1.jpg" width="48" height="48" alt="User">
+            <img src="assets/images/xs/avatar1.jpg" width="48" height="48" alt="User" />
         </div>
         <div class="info-container">
-            <div class="name" data-toggle="dropdown" id="username">David Disu</div>
+            <div class="name" data-toggle="dropdown" id="username">John Doe</div>
             <div class="btn-group user-helper-dropdown">
                 <i class="material-icons" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true" role="button"> keyboard_arrow_down </i>
                 <ul class="dropdown-menu slideUp">
                     <li><a href="profile.html"><i class="material-icons">person</i>Profile</a></li>
                     <li class="divider"></li>
-                    <li><a href="javascript:void(0);"><i class="material-icons">shopping_cart</i>Ticket</a></li>
-                    <li class="divider"></li>
                     <li><a href="sign-in.html"><i class="material-icons">input</i>Sign Out</a></li>
                 </ul>
             </div>
-            <div class="email" id="useremail">daviddisu8@gmail.com</div>
+            <div class="email" id="useremail">john.doe@example.com</div>
         </div>
     </div>
     <!-- #User Info -->
     <!-- Menu -->
     <div class="menu">
-        <div class="slimScrollDiv" style="position: relative; overflow: hidden; width: auto; height: calc(100vh - 80px);"><ul class="list" style="overflow: hidden; width: auto; height: calc(100vh - 80px);">
+        <ul class="list">
             <li class="header">MAIN NAVIGATION</li>
-            <li class="active"> <a href="index.html" class="toggled waves-effect waves-block"><i class="zmdi zmdi-home"></i><span>Dashboard</span></a>
+            <li class="active"> <a href="index.html"><i class="zmdi zmdi-home"></i><span>Dashboard</span></a>
 
             </li>
 
-            <li> <a href="javascript:void(0);" class="menu-toggle waves-effect waves-block"><i class="zmdi zmdi-shopping-cart"></i><span>Ticket</span> </a>
+            <li> <a href="javascript:void(0);" class="menu-toggle"><i class="zmdi zmdi-shopping-cart"></i><span>Ticket</span> </a>
                 <ul class="ml-menu">
 
-                    <li> <a href="vticket.html" class=" waves-effect waves-block">View Ticket</a></li>
-                    <li><a href="ticket_timeline.html" class=" waves-effect waves-block">Tickect Timeline</a></li>
+                    <li> <a href="vticket.html">View Ticket</a></li>
+                    <li><a href="ticket_timeline.html">Tickect Timeline</a></li>
 
                 </ul>
             </li>
-            <li> <a href="pickup.html" class="menu-toggle waves-effect waves-block"><i class="zmdi zmdi-car"></i><span>Assign Pick-Ups</span> </a></li>
+            <li> <a href="pickup.html" class="menu-toggle"><i class="zmdi zmdi-car"></i><span>Assign Pick-Ups</span> </a></li>
 
-            <li> <a href="javascript:void(0);" class="menu-toggle waves-effect waves-block"><i class="zmdi zmdi-home"></i><span>Property</span> </a>
+            <li> <a href="javascript:void(0);" class="menu-toggle"><i class="zmdi zmdi-home"></i><span>Property</span> </a>
                 <ul class="ml-menu">
-                    <li> <a href="vproperty.html" class=" waves-effect waves-block">View Property</a></li>
-                    <li> <a href="add_property.html" class=" waves-effect waves-block">Add Property</a></li>
-                    <li> <a href="add_property_grp.html" class=" waves-effect waves-block">Add Property Group</a></li>
-                    <li> <a href="view_property_grp.html" class=" waves-effect waves-block">View Property Groups</a></li>
+                    <li> <a href="vproperty.html">View Property</a></li>
+                    <li> <a href="add_property.html">Add Property</a></li>
+                    <li> <a href="add_property_grp.html">Add Property Group</a></li>
+                    <li> <a href="view_property_grp.html">View Property Groups</a></li>
                 </ul>
             </li>
-            <li> <a href="javascript:void(0);" class="menu-toggle waves-effect waves-block"><i class="zmdi zmdi-accounts"></i><span>Users/Agents</span> </a>
+            <li> <a href="javascript:void(0);" class="menu-toggle"><i class="zmdi zmdi-accounts"></i><span>Users/Admins</span> </a>
                 <ul class="ml-menu">
-                    <li><a href="contact.html" class=" waves-effect waves-block">View Clients</a></li>
-                    <li><a href="create_user.html" class=" waves-effect waves-block">Create Clients</a> </li>
-                    <li><a href="contact.html" class=" waves-effect waves-block">View Agents</a></li>
-                    <li><a href="create_agent.html" class=" waves-effect waves-block">Create Agents</a></li>
-
-
-                    <li><a href="form-upload.html" class=" waves-effect waves-block">File Upload</a></li>
+                    <li><a href="contact.html">View Clients</a></li>
+                    <li><a href="create_user.html">Create Clients</a> </li>
+                    <li><a href="contact_admin.html">View Admins</a></li>
+                    <li><a href="create_agent.html">Create Admins</a></li>
+                    <li><a href="form-upload.html">File Upload</a></li>
                 </ul>
             </li>
-            <li> <a href="javascript:void(0);" class="menu-toggle waves-effect waves-block"><i class="zmdi zmdi-grid"></i><span>Reports</span> </a>
+            <li> <a href="javascript:void(0);" class="menu-toggle"><i class="zmdi zmdi-grid"></i><span>Reports</span> </a>
                 <ul class="ml-menu">
-                    <li> <a href="vreport.html" class=" waves-effect waves-block">View Report</a> </li>
-
-                </ul>
-            </li>
-
-            <li> <a href="javascript:void(0);" class="menu-toggle waves-effect waves-block"><i class="zmdi zmdi-money"></i><span>Payments</span> </a>
-                <ul class="ml-menu">
-
-                    <li><a href="wallet.html" class=" waves-effect waves-block">Wallet</a></li>
-                    <li><a href="billing.html" class=" waves-effect waves-block">Billing</a></li>
+                    <li> <a href="vreport.html">View Report</a> </li>
 
                 </ul>
             </li>
 
+            <li> <a href="javascript:void(0);" class="menu-toggle"><i class="zmdi zmdi-money"></i><span>Payments</span> </a>
+                <ul class="ml-menu">
+
+                    <li><a href="wallet.html">Wallet</a></li>
+                    <li><a href="billing.html">Billing</a></li>
+
+                </ul>
+            </li>
 
 
 
 
-        </ul><div class="slimScrollBar" style="background: rgba(0, 0, 0, 0.2); width: 3px; position: absolute; top: 0px; opacity: 0.4; display: none; border-radius: 3px; z-index: 99; right: 1px; height: 595px;"></div><div class="slimScrollRail" style="width: 3px; height: 100%; position: absolute; top: 0px; display: none; border-radius: 0px; background: rgb(51, 51, 51); opacity: 0.2; z-index: 90; right: 1px;"></div></div>
+
+        </ul>
     </div>
     <!-- #Menu -->
 </aside>
-
-<!-- Chat-launcher -->
 <div class="chat-launcher"></div>
 <div class="chat-wrapper">
     <div class="card">
